# open-xiaoai-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  start.sh
.github/workflows/: release.yml
core/: app.py  openclaw.py  openclaw_conversation.py  wakeup_session.py  xiaoai.py  xiaoai_conversation.py  xiaozhi.py
core/models/: keywords.txt
core/services/: api_server.py  speaker.py
core/services/audio/: codec.py
core/services/audio/asr/: sherpa.py
core/services/audio/kws/: __init__.py  keywords.py
core/services/audio/vad/: __init__.py  silero.py
core/services/protocols/: websocket_protocol.py
core/services/tts/: doubao.py
core/utils/: logger.py
docs/: doubao-tts-api.md  openxiaoai-voice-api.md
native/: Cargo.toml
native/src/: lib.rs  opus.rs
native/src/tts/: doubao.rs  mod.rs
scripts/: start.sh
skills/xiaoai-tts/: SKILL.md
skills/xiaoai-tts/scripts/: control.py  play_text.py  tts_doubao.py
skills/xiaoai-tts/tools/: xiaoai-tts
tests/: test_tts.py
